syntax = "proto3";
package dbservice;
option go_package = "../pb";

message ChunkServerHealReq {

  string  id=1;
  string ip =2;
  string port=3;
  int32 block_mb_size=4;
  int64 total_mb_size=5;
  bool  is_init=6;
}
message ChunkServerHealResp {
  int32   code=2;
  string  msg=3;
}


service Service {
  rpc ModifyChunkServerMeta(ChunkServerHealReq) returns(ChunkServerHealResp) {}
}